# omarchy_restore

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: make_fixture.py
src/omarchy_restore/: __main__.py  archive.py  backup.py  diff.py  omarchy.py  paths.py  restore.py
src/omarchy_restore/tui/: screens.py  styles.tcss  theme.py  widgets.py
tests/: test_app.py  test_backup.py  test_diff.py  test_omarchy.py  test_paths.py  test_restore.py  test_theme.py
