[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omarchy-restore"
version = "0.1.0"
description = "A safe, theme-aware TUI to restore a home-directory tar.xz backup onto a fresh Omarchy install."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "omarchy-restore contributors" }]
keywords = ["omarchy", "backup", "restore", "tui", "textual", "tar", "xz"]
classifiers = [
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.scripts]
omarchy-restore = "omarchy_restore.__main__:main"

[project.urls]
Homepage = "https://github.com/omarchy-restore/omarchy-restore"
Issues = "https://github.com/omarchy-restore/omarchy-restore/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/omarchy_restore"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
"src/omarchy_restore/tui/*.py" = ["RUF012", "ASYNC240"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportAttributeAccessIssue = false
